my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EARGD/EARGD.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EARGD.dml:6:7: In test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EARGD.dml:8:21: error EARGD: duplicate method parameter name 'i'
